@@ -1,14 +1,13 @@
-[gd_scene load_steps=10 format=3 uid="uid://cuqm30mdbu41k"]
+[gd_scene load_steps=9 format=3 uid="uid://cuqm30mdbu41k"]
 
 [ext_resource type="Script" uid="uid://d33oqm6uprjxl" path="res://Board/DuelCreaturesBoard.cs" id="1_s27tx"]
 [ext_resource type="PackedScene" uid="uid://dlahod6s4jx0i" path="res://Board/DropZoneComponent.tscn" id="2_a02pn"]
 [ext_resource type="PackedScene" uid="uid://dm8sksf3b1gcw" path="res://Board/UnitCircleComponent.tscn" id="3_iu5jy"]
 [ext_resource type="PackedScene" uid="uid://cvy4hb158pate" path="res://Board/DamageZoneComponent.tscn" id="4_iu5jy"]
-[ext_resource type="PackedScene" uid="uid://xfgt43rddlvv" path="res://Board/HorizontalCardArea.tscn" id="5_3hmgy"]
 [ext_resource type="PackedScene" uid="uid://b7fl8cs62jr2v" path="res://Board/Hand.tscn" id="5_iu5jy"]
-[ext_resource type="PackedScene" uid="uid://cow87og7qhndr" path="res://Board/CardVerticalStack.tscn" id="6_3hmgy"]
-[ext_resource type="PackedScene" uid="uid://bevj84kr2566s" path="res://Board/CardLineStatic.tscn" id="7_3hmgy"]
+[ext_resource type="PackedScene" uid="uid://bevj84kr2566s" path="res://Board/BaseComponents/CardLineStatic.tscn" id="7_3hmgy"]
 [ext_resource type="PackedScene" uid="uid://d0hdjku8idjs" path="res://Board/DeckComponent.tscn" id="7_6kkbp"]
+[ext_resource type="PackedScene" uid="uid://c3xgtr5vl38o1" path="res://Board/TriggerZoneComponent.tscn" id="7_641ut"]
 
 [node name="Board" type="Control"]
 layout_mode = 3
@@ -93,20 +92,16 @@ theme_override_constants/separation = 20
 unique_name_in_owner = true
 layout_mode = 2
 
-[node name="OppDeck1" parent="VBoxContainer/OppBoard/MarginContainer/HBoxContainer/Left/VBoxContainer/MarginContainer/Control" instance=ExtResource("6_3hmgy")]
-unique_name_in_owner = true
-visible = false
-layout_mode = 2
-
 [node name="OppDeck" parent="VBoxContainer/OppBoard/MarginContainer/HBoxContainer/Left/VBoxContainer/MarginContainer/Control" instance=ExtResource("7_6kkbp")]
 unique_name_in_owner = true
 layout_mode = 2
 ShowCount = true
 
-[node name="OppTriggerZone" parent="VBoxContainer/OppBoard/MarginContainer/HBoxContainer/Left/VBoxContainer" instance=ExtResource("5_3hmgy")]
+[node name="OppTriggerZone" parent="VBoxContainer/OppBoard/MarginContainer/HBoxContainer/Left/VBoxContainer" instance=ExtResource("7_641ut")]
 unique_name_in_owner = true
 custom_minimum_size = Vector2(193, 139)
 layout_mode = 2
+RemoveCardDelayTime = 0.4
 
 [node name="Center" type="Control" parent="VBoxContainer/OppBoard/MarginContainer/HBoxContainer"]
 layout_mode = 2
@@ -531,10 +526,11 @@ grow_horizontal = 2
 grow_vertical = 2
 theme_override_constants/separation = 20
 
-[node name="PlayerTriggerZone" parent="VBoxContainer/PlayerBoard/MarginContainer/HBoxContainer/Right/VBoxContainer" instance=ExtResource("5_3hmgy")]
+[node name="PlayerTriggerZone" parent="VBoxContainer/PlayerBoard/MarginContainer/HBoxContainer/Right/VBoxContainer" instance=ExtResource("7_641ut")]
 unique_name_in_owner = true
 custom_minimum_size = Vector2(193, 139)
 layout_mode = 2
+RemoveCardDelayTime = 0.4
 
 [node name="Control" type="MarginContainer" parent="VBoxContainer/PlayerBoard/MarginContainer/HBoxContainer/Right/VBoxContainer"]
 layout_mode = 2
@@ -543,12 +539,6 @@ layout_mode = 2
 layout_mode = 2
 size_flags_horizontal = 4
 theme_override_constants/separation = 20
-
-[node name="PlayerDeck1" parent="VBoxContainer/PlayerBoard/MarginContainer/HBoxContainer/Right/VBoxContainer/Control/Verticals" instance=ExtResource("6_3hmgy")]
-unique_name_in_owner = true
-visible = false
-layout_mode = 2
-ShowCount = true
 
 [node name="PlayerDeck" parent="VBoxContainer/PlayerBoard/MarginContainer/HBoxContainer/Right/VBoxContainer/Control/Verticals" instance=ExtResource("7_6kkbp")]
 unique_name_in_owner = true
