@@ -1,0 +1,6 @@
+using ArC.CardGames.Components;
+
+public interface ICardSpaceBindable<CardSpace> where CardSpace : ICardSpace
+{
+    void Bind(CardSpace cardSpace);
+}
