@@ -1,7 +1,7 @@
 [gd_scene load_steps=3 format=3 uid="uid://b7fl8cs62jr2v"]
 
 [ext_resource type="Script" uid="uid://d3figg5ag7knc" path="res://Board/HandComponent.cs" id="1_8uxgw"]
-[ext_resource type="PackedScene" uid="uid://cnp5v17a7qgwg" path="res://Board/CardLineDynamic.tscn" id="1_incbc"]
+[ext_resource type="PackedScene" uid="uid://cnp5v17a7qgwg" path="res://Board/BaseComponents/CardLineDynamic.tscn" id="1_incbc"]
 
 [node name="CardLineDynamic" instance=ExtResource("1_incbc")]
 script = ExtResource("1_8uxgw")
