@@ -1,3 +1,8 @@
+v.0003 Moar Cards
+- Updated for ArC v.0000006
+- Created TriggerZone component
+- Created ICardSpaceBindable interface
+
 v.0002 Skills and Trigger selection
 - Updated for ArC v.0000004
 - Utilize VanguardAI from ArC, InputProviderFactory loads the AI data
